# langchain-pollinations

./: .env.example  .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
academy/: L1_fast_agent.py  L2_agent_messages.py  L2_model_messages.py  L3_custom_streaming.py  L3_messages_streaming.py  L3_values_streaming.py  L4_doc_tools.py  L4_tools.py  L5_MCP.py  L6_Memory.py  L7_basic_structured_output.py  L7_complex_structured_output.py  L8_dynamic_prompt.py  L9_human_in_the_loop_allow.py  L9_human_in_the_loop_reject.py  pollinations_audio.py  pollinations_image.py
debugging/: debug_httpx_raw.py  debug_raw_chat.py  debug_raw_stream.py  debugging.md
docs/: api.json  api_reference.md  code_structure_and_composition.md  design_decissions.md  project_structure.md  tooling.md
docs/api_reference/: 01_Overview.md  02_ChatPollinations.md  03_ChatPollinationsConfig.md  04_Types.md  05_ImagePollinations.md  06_AccountInformation.md  07_ModelInformation.md  08_PollinationsAPIError.md  09_TTSPollinations.md  10_STTPollinations.md
examples/audio/: bad_dialogue.py  dialogue.py  plain_text.py  stt_pipeline.py  three_audios.py  three_songs.py  tts_pipeline.py  verbose_json.py
examples/chat_completions/: audio_generation.py  basic_image_generation.py  errors.py  messages_streaming_chat.py  models_list.py  multiimage_question.py  referential_image_generation.py  simple_chat.py  simple_tool_agent.py  transcribe_audio.py  transparent_image_generation.py  url_audio.py  url_image.py  url_ocr.py  video_question.py
examples/image/: basic_image_generation.py  custom_image_generation.py  framed_video.py  image_to_image.py  image_to_video.py  interpolated_video.py  referential_image_generation.py  simple_image_generation.py  text_to_video.py  transparent_image_generation.py  utils.py  video_generation.py
src/langchain_pollinations/: __init__.py  _audio_catalog.py  _auth.py  _client.py  _errors.py  _openai_compat.py  _sse.py  account.py  chat.py  image.py  models.py  py.typed  stt.py  tts.py
tests/integration/: conftest.py  test_chat_completions.py  test_chat_multimodal.py  test_chat_streaming.py  test_image_endpoint.py  test_models_endpoints.py  test_stt_endpoint.py  test_tts_endpoint.py
tests/integration/with/: conftest.py  test_with_config.py  test_with_fallbacks.py  test_with_listeners.py  test_with_retry.py  test_with_structured_output_pydantic.py  test_with_structured_output_typed_dict.py
tests/unit/: test_account.py  test_audio_catalog.py  test_auth.py  test_chat.py  test_chat_build_request.py  test_client.py  test_content_block_handling.py  test_image.py  test_models.py  test_openai_compat.py  test_post_multipart.py  test_sse.py  test_structured_errors.py  test_stt.py  test_tts.py
