[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "langchain-pollinations"
version = "0.2.5b1"  # PEP 440
description = "LangChain provider for Pollinations unified API (OpenAI-compatible chat completions + image endpoint)."
license = { text = "MIT" }
authors = [{ name = "onatrain" }]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["langchain", "pollinations", "ai", "llm", "multimodal", "agents", "function-calling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "langchain-core>=1.0.0",
  "pydantic>=2.6.0",
  "httpx>=0.27.0",
  "typing-extensions>=4.10.0",
]

[project.urls]
Documentation = "https://github.com/onatrain/langchain-pollinations/blob/main/docs/api_reference.md"
Repository = "https://github.com/onatrain/langchain-pollinations"
Changelog = "https://github.com/onatrain/langchain-pollinations/blob/main/CHANGELOG.md"

# Entry point para que LangChain pueda descubrir el chat model.
[project.entry-points."langchain.chatmodels"]
pollinations = "langchain_pollinations.chat:ChatPollinations"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_pollinations"]

[tool.hatch.build.targets.sdist]
include = [
    # Root
    ".env.example",
    ".gitignore",
    "CHANGELOG.md",
    "LICENSE.md",
    "pyproject.toml",
    "README.md",
    "uv.lock",
    # Directorios
    "academy/**",
    "assets/**",
    "debugging/**",
    "docs/**",
    "examples/**",
    "src/**",
    "tests/**",
]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "I", "B", "UP", "SIM"]
lint.ignore = [
    "E501",
    "UP035",  # typing.Callable
    "UP045",  # typing.Optional
    "UP007",  # typing.Union
]

# Modo Vertical Hanging Indent
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
force_grid_wrap = 0
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --cov=src/langchain_pollinations --cov-report=term-missing"
markers = [
  "integration: tests que requieren POLLINATIONS_API_KEY y red",
]
asyncio_mode = "auto"

[dependency-groups]
dev = [
  "langchain>=1.2.8",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
  "python-dotenv>=1.0.0",
  "mypy>=1.8.0",
  "ruff>=0.4.0",
  "isort>=5.13.0",
  "langchain-community>=0.4.1",
  "langgraph>=1.0.8",
  "langchain-mcp-adapters>=0.2.1",
  "mcp>=1.26.0",
  "nest-asyncio>=1.6.0",
  "pydantic[email]>=2.12.5",
  "pytest-cov>=7.0.0",
  "grip>=4.6.2",
  "pathspec>=1.0.4",
  "twine>=6.2.0",
]
